--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,8 +30,10 @@ jobs:
           node-version: '12.x'
           
       # Sets up npm environment 
-      - name: npm install
-        run: npm install
+      - name: Install dependencies
+        run: npm ci
+      - name: Build with npm
+        run: npm run build --if-present
       - name: Test with npm
         run: npm test
           
