--- a/echo-app/package.json
+++ b/echo-app/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "bootstrap": "^4.6.0",
+    "jwt-decode": "^3.1.2",
     "opensheetmusicdisplay": "^0.9.5",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
