--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -72,7 +72,7 @@ jobs:
           
     # Deploy to AWS
       - name: Deploy to pull_song lambda
-        uses: appleboy/lamda-action@v0.1.3
+        uses: appleboy/lambda-action@v0.1.3
         with:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -82,7 +82,7 @@ jobs:
           dry_run: true
           
       - name: Deploy to pull_account lambda
-        uses: appleboy/lamda-action@v0.1.3
+        uses: appleboy/lambda-action@v0.1.3
         with:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -92,7 +92,7 @@ jobs:
           dry_run: true
           
       - name: Deploy to push_data lambda
-        uses: appleboy/lamda-action@v0.1.3
+        uses: appleboy/lambda-action@v0.1.3
         with:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
