--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -71,11 +71,19 @@ jobs:
           runtime: python3.9
           
     # Zip things
-      - name: Zip pull
+      - name: Zip pull song
         uses: montudor/action-zip@v0.1.0
         with:
-          args: zip -qq -r ./pull.zip src/db_client/pull_song_handler.py src/db_client/db_client.py src/db_client/exceptions.py
-      
+          args: zip -qq -r ./pull_song.zip src/db_client/pull_song_handler.py src/db_client/db_client.py src/db_client/exceptions.py
+      - name: Zip pull account
+        uses: montudor/action-zip@v0.1.0
+        with:
+          args: zip -qq -r ./pull_account.zip src/db_client/pull_user_handler.py src/db_client/db_client.py src/db_client/exceptions.py
+      - name: Zip push data
+        uses: montudor/action-zip@v0.1.0
+        with:
+          args: zip -qq -r ./push_data.zip src/db_client/push_handler.py src/db_client/db_client.py src/db_client/exceptions.py
+          
     # Deploy to AWS
       - name: Deploy to pull_song lambda
         uses: appleboy/lambda-action@v0.1.3
@@ -84,7 +92,7 @@ jobs:
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_region: us-east-1
           function_name: pull_song
-          zip_file: pull.zip
+          zip_file: pull_song.zip
           dry_run: true
           
       - name: Deploy to pull_account lambda
@@ -92,9 +100,9 @@ jobs:
         with:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws_region: us-east-1
           function_name: pull_account
-          source: src/db_client/pull_user_handler.py src/db_client/db_client.py src/db_client/exceptions.py
+          zip_file: pull_account.zip
           dry_run: true
           
       - name: Deploy to push_data lambda
@@ -102,7 +110,7 @@ jobs:
         with:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws_region: us-east-1
           function_name: push_data
-          source: src/db_client/push_handler.py src/db_client/db_client.py src/db_client/exceptions.py
+          zip_file: push_data.zip
           dry_run: true
