--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "bootstrap": "^4.6.0"
+    "bootstrap": "^4.6.0",
+    "opensheetmusicdisplay": "^0.9.5",
+    "react-router-dom": "^5.2.0"
   }
 }
