--- a/echo-app/package.json
+++ b/echo-app/package.json
@@ -8,6 +8,9 @@
     "@testing-library/user-event": "^12.6.3",
     "bootstrap": "^4.6.0",
     "jwt-decode": "^3.1.2",
+    "midi-player": "^7.0.26",
+    "midifile": "^2.0.0",
+    "midiplayer": "^1.0.0",
     "opensheetmusicdisplay": "^0.9.5",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
