--- a/echo-app/package.json
+++ b/echo-app/package.json
@@ -6,18 +6,21 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "bindings": "^1.5.0",
     "bootstrap": "^4.6.0",
     "jwt-decode": "^3.1.2",
-    "midi-player": "^7.0.26",
-    "midifile": "^2.0.0",
-    "midiplayer": "^1.0.0",
+    "lame": "^1.2.4",
+    "musicxml-to-pcm": "0.0.2",
+    "nan": "^2.14.2",
     "opensheetmusicdisplay": "^0.9.5",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
-    "web-vitals": "^1.1.0"
+    "v8": "^0.1.0",
+    "web-vitals": "^1.1.0",
+    "xml2js": "^0.4.23"
   },
   "scripts": {
     "start": "react-scripts start",
